Fix layout problems on profile page. Fix some comments to reflect current program state

--- a/views/styles/profile.css
+++ b/views/styles/profile.css
@@ -38,7 +38,7 @@ p {
 
 .profile-header {
   display: grid;
-  grid-template-columns: 24.75% 40.5% 24.75%;
+  grid-template-columns: 24.75% 50.5% 24.75%;
   grid-template-rows: 100%;
 }
 
@@ -74,7 +74,6 @@ p {
   text-align: right;
 }
 
-
 .profile-edit-buttons {
   position: absolute;
   top: 85px;
@@ -84,9 +83,7 @@ p {
 
 .edit-profile {
   background-color: var(--light-grey);
-  /* needs attention on the button colour*/
   color: black;
-  /* var(--secondary); changed to black temporarily*/
   border: 1px solid var(--light-grey);
   text-align: center;
   width: 8rem;
@@ -128,24 +125,15 @@ p {
   color: var(--gold);
 }
 
-/* Tooltips referenced from https://www.w3schools.com/css/css_tooltip.asp */
-.tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: rgba(0, 0, 0, 0.512);
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
+.profile-contact-medium-desktop {
+  display: none;
+  grid-column: 1 / span 1;
 }
 
-.tooltip:hover~.tooltiptext {
-  visibility: visible;
+.profile-info-medium-desktop {
+  display: none;
+  grid-column: 1 / span 1;
 }
-
-/* End of tooltips */
 
 .profile-description {
   width: 50%;
@@ -188,6 +176,25 @@ p {
   width: 96%;
   max-width: 700px;
 }
+
+/* Tooltips referenced from https://www.w3schools.com/css/css_tooltip.asp */
+.tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: rgba(0, 0, 0, 0.512);
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover~.tooltiptext {
+  visibility: visible;
+}
+
+/* End of tooltips */
 
 /* Hamburger Menu referenced from https://codepen.io/erikterwan/pen/EVzeRP */
 #profile-buttons-toggle-menu {
@@ -273,14 +280,6 @@ p {
 
 /* End of hamburger menu */
 
-.profile-contact-medium-desktop {
-  display: none;
-}
-
-.profile-info-medium-desktop {
-  display: none;
-}
-
 @media only screen and (min-width: 601px) and (max-width: 800px) {
   .profile-header {
     display: grid;
@@ -351,8 +350,8 @@ p {
     grid-row: 3 / span 1;
     margin-top: 50px;
   }
-  
-  .profile-contact-medium-desktop > h3 {
+
+  .profile-contact-medium-desktop>h3 {
     margin-bottom: 12px;
   }
 
